--- a/style.css
+++ b/style.css
@@ -8,6 +8,18 @@ body {
 
 .jumbotron {
 	height: 650px;
+	background-color: #333;
+	color : #aaa;
+}
+
+.about {
+	height: 400px;
+}
+
+.portofolio {
+	height: 400px;
+	background-color: #333;
+	color: #aaa;
 }
 
 .contact {
@@ -18,13 +30,13 @@ footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 100px;
+	height: 75px;
 	background-color: #333;
 	padding-top: 30px;  
 }
 
 footer p {
 	color: #aaa;
-	font-size: 1.5em;
+	font-size: 1em;
 
 }
